# django-graphql-template

./: .base_env  .gitignore  Dockerfile  Pipfile  db.sqlite3  pyproject.toml
.bandit/: bandit.sh  banditParser.py
.github/workflows/: bandit-checks.yml  pr-actions.yml
example/: models.py  schema.py
example/migrations/: 0001_initial.py
pyvideon/: settings.py  urls.py
